Webbikäyli kenttien lisäämiseen

--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
@@ -47,11 +47,6 @@ body {
 }
 	
 
-#header .ui-btn { margin: 0px; padding: 0px; top: 5px; width: 44px; height: 34px; border-radius: 6px; }
-#header .ui-btn-inner { border: 0px; padding: 0px; margin-top: 6px; margin-left: 10px;}
-#header .ui-btn-text { font-size: 1.2em, }
-
-
 #roundScore {
 	border: 0px;
 	font-size: 0.8em;
@@ -111,7 +106,6 @@ body {
 	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
-
 }
 
 #scoreB {
@@ -152,7 +146,7 @@ body {
 	bottom: -1px !important;
 //	bottom: 0px;
 	margin: 0px;
-	}
+}
 	
 #footer .ui-btn { margin: 0px; padding: 0px; top: 0px; width: 44px; height: 44px; border-radius: 2px; border-color: transparent; box-shadow: none; background: transparent }
 #footer .ui-btn-inner { border: 0px; padding: 0px; margin-top: 9px; margin-left: 10px;}
@@ -165,8 +159,7 @@ body {
 	top: 10px;
 	margin: 0px;
 	height: 80px;
-
-	}
+}
 
 #sliderWrappi .ui-block-a { width: 5%}
 #sliderWrappi .ui-block-b { width: 90%}
@@ -179,7 +172,6 @@ body {
 	border-style: outset;
 	border-color: #222;
 	border-radius: 10px;
-	
 	background: rgb(30,30,30); /* Old browsers */
 	background: -moz-linear-gradient(left,  rgba(30,30,30,1) 0%, rgba(86,86,86,1) 15%, rgba(206,206,206,1) 35%, rgba(239,239,239,1) 42%, rgba(239,239,239,1) 58%, rgba(206,206,206,1) 65%, rgba(86,86,86,1) 85%, rgba(30,30,30,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(30,30,30,1)), color-stop(15%,rgba(86,86,86,1)), color-stop(35%,rgba(206,206,206,1)), color-stop(42%,rgba(239,239,239,1)), color-stop(58%,rgba(239,239,239,1)), color-stop(65%,rgba(206,206,206,1)), color-stop(85%,rgba(86,86,86,1)), color-stop(100%,rgba(30,30,30,1))); /* Chrome,Safari4+ */
@@ -235,9 +227,6 @@ body {
     -webkit-box-shadow: none;
     box-shadow: none ;
 }
-
-// a.ui-slider-handle-snapping { -webkit-transition: none; -moz-transition: none; }
-// a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 
 #scoreSlider {
 	display: none;
@@ -436,7 +425,8 @@ body {
 	border-color: #5c5c5c;
 	border-collapse: collapse;
 	font-weight: bold;
-//	background : #eee;
+	font-size: 0.8em;
+	text-shadow: 0px 1px 1px #fff;
 	background: rgb(224,224,224); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(224,224,224,1) 0%, rgba(192,192,192,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(224,224,224,1)), color-stop(100%,rgba(192,192,192,1))); /* Chrome,Safari4+ */
@@ -452,6 +442,7 @@ body {
 	border-style: solid;
 	border-color: #5c5c5c;
 	border-width: 1px;
+	text-shadow: 0px 1px 1px #fff;
 	background: rgb(255,255,255); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 50%, rgba(233,233,233,1) 51%, rgba(248,248,248,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(245,245,245,1)), color-stop(51%,rgba(233,233,233,1)), color-stop(100%,rgba(248,248,248,1))); /* Chrome,Safari4+ */
@@ -468,7 +459,6 @@ body {
 	border-color: #5c5c5c;
 	border-width: 1px;
 	font-weight: bold;
-//	background: #fff;
 	background: rgb(255,255,255); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 50%, rgba(233,233,233,1) 51%, rgba(248,248,248,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(245,245,245,1)), color-stop(51%,rgba(233,233,233,1)), color-stop(100%,rgba(248,248,248,1))); /* Chrome,Safari4+ */
@@ -483,9 +473,8 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	border-collapse: collapse;
 	font-weight: bold;
-//	background : #fff;
+	text-shadow: 0px 1px 1px #fff;
 	background: rgb(226,226,226); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(226,226,226,1)), color-stop(50%,rgba(219,219,219,1)), color-stop(51%,rgba(209,209,209,1)), color-stop(100%,rgba(254,254,254,1))); /* Chrome,Safari4+ */
@@ -502,13 +491,31 @@ body {
 	border-color: #5c5c5c;
 	padding: 1px;
 	background: rgb(254,245,224); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
+		text-shadow: 0px 1px 1px #fff;
+	background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
+}	
+
+#teeYellowDisabled {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	color: #ccc;
+	padding: 1px;
+	background: rgb(254,245,224); /* Old browsers */
+		text-shadow: 0px 1px 1px #fff;
+	background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
 }	
 
 #teeRed {
@@ -516,6 +523,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
 	border-style: solid;
 	border-color: #5c5c5c;
 	padding: 1px;
+		text-shadow: 0px 1px 1px #fff;
+	background: rgb(253,212,205); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(253,212,205,1) 0%, rgba(251,219,215,1) 50%, rgba(253,202,195,1) 51%, rgba(252,205,198,1) 71%, rgba(249,205,201,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(253,212,205,1)), color-stop(50%,rgba(251,219,215,1)), color-stop(51%,rgba(253,202,195,1)), color-stop(71%,rgba(252,205,198,1)), color-stop(100%,rgba(249,205,201,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(253,212,205,1) 0%,rgba(251,219,215,1) 50%,rgba(253,202,195,1) 51%,rgba(252,205,198,1) 71%,rgba(249,205,201,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdd4cd', endColorstr='#f9cdc9',GradientType=0 ); /* IE6-9 */
+}
+
+#teeRedDisabled {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	color: #ccc;
+	padding: 1px;
+	text-shadow: 0px 1px 1px #fff;
 	background: rgb(253,212,205); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(253,212,205,1) 0%, rgba(251,219,215,1) 50%, rgba(253,202,195,1) 51%, rgba(252,205,198,1) 71%, rgba(249,205,201,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(253,212,205,1)), color-stop(50%,rgba(251,219,215,1)), color-stop(51%,rgba(253,202,195,1)), color-stop(71%,rgba(252,205,198,1)), color-stop(100%,rgba(249,205,201,1))); /* Chrome,Safari4+ */
@@ -531,6 +556,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
 	border-style: solid;
 	border-color: #5c5c5c;
 	padding: 1px;
+	text-shadow: 0px 1px 1px #fff;
+	background: rgb(236,248,252); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(236,248,252,1) 0%, rgba(231,246,253,1) 50%, rgba(212,238,250,1) 51%, rgba(212,236,254,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(236,248,252,1)), color-stop(50%,rgba(231,246,253,1)), color-stop(51%,rgba(212,238,250,1)), color-stop(100%,rgba(212,236,254,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(236,248,252,1) 0%,rgba(231,246,253,1) 50%,rgba(212,238,250,1) 51%,rgba(212,236,254,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf8fc', endColorstr='#d4ecfe',GradientType=0 ); /* IE6-9 */
+}
+
+#teeBlueDisabled {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	padding: 1px;
+	text-shadow: 0px 1px 1px #fff;
+	color: #ccc;
 	background: rgb(236,248,252); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(236,248,252,1) 0%, rgba(231,246,253,1) 50%, rgba(212,238,250,1) 51%, rgba(212,236,254,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(236,248,252,1)), color-stop(50%,rgba(231,246,253,1)), color-stop(51%,rgba(212,238,250,1)), color-stop(100%,rgba(212,236,254,1))); /* Chrome,Safari4+ */
@@ -546,16 +589,33 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
 	border-style: solid;
 	border-color: #5c5c5c;
 	padding: 1px;
+	text-shadow: 0px 1px 1px #fff;
 	background: rgb(255,255,255); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
 }
 
+#teeWhiteDisabled {
+	border-width: 1px;
+	border-style: solid;
+	border-color: #5c5c5c;
+	color: #ccc;
+	padding: 1px;
+	text-shadow: 0px 1px 1px #fff;
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+}
 
 #scoreCardButtons {
 	clear: both;
@@ -590,7 +650,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 #prefsPlayerHcp {
 }
-
 
 #prefs .ui-page.ui-body-c  {
 	overflow: auto;
@@ -652,6 +711,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	width: 100%;
 }
 
-#scroller {
-}
 
