--- a/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
@@ -88,6 +88,13 @@ var ApexEventProxy = function() {
 	self.endRound = function (data, done, always, fail) {
     	self.proxy.post('{{path('round_json_end')}}', data, done, fail, always);
     };
+   	self.saveCourseData = function (data, done, always, fail) {
+    	self.proxy.post('{{path('course_json_set')}}', data, done, fail, always);
+    };
+	self.saveHoleData = function (data, done, always, fail) {
+    	self.proxy.post('{{path('hole_json_set')}}', data, done, fail, always);
+    };
+
 
 };
 var apexEventProxy = new ApexEventProxy();
