--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
@@ -4,7 +4,7 @@ body {
 //	position: fixed;
 //	max-width: 800px;
 	width: 100%;
-//	background: url('img/wild_oliva.png') !important;
+	background: url('../images/textured_stripes.png') !important;
 //	background-color: black;
 //	background: black;
 	overflow-y: visible;
@@ -615,6 +615,15 @@ body {
 	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+}
+
+#transparentInput {
+	background: transparent;
+}
+
+#transparentInputDisabled {
+	background: transparent;
+	color: #ccc;
 }
 
 #scoreCardButtons {
