--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
@@ -8,7 +8,7 @@
 <!--	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-lightness/jquery-ui.css" />  -->
 
 
-<!-- twitter bootstrap -->
+<!-- twitter bootstrap css -->
 	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery-ui-1.10.0.custom.css') }}"> 
 
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
@@ -16,30 +16,34 @@
 
    	<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script>
+ 	<script src="{{ asset('bundles/apexscore/js/parsley.js') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/site.js') }}" type="text/javascript"></script>
 </head>
 
 <body style="font-family: arial">
 
-	<div class"ui-widget">
+	<div class="ui-widget" style="float:left; margin: 5px; padding: 15px">
 		<div>
+		<span style="font-weight:bold; font-size: 120%"><a href="#" data-bind="click: newCourse">Add new course</a></span>
 			<ul data-bind="foreach: courseList">
 				<li>
 				<a href="#" data-bind="click: $root.getCourseGeneralData.bind($data, id)"><span data-bind="text: name"></span></a>
 				</li>
 			</ul>
-			&nbsp;&nbsp;&nbsp;<a href="#" data-bind="click: newCourse">Add new course</a>
 		</div>
 	</div>
 
 	<!-- ko if: holes().length > 0 -->	
 
 	<div class="ui-widget-content" style="margin: 5px; padding: 15px; float:left">
+	
+		<form data-validate="parsley" id="form">
+	
 		<label for="courseName">Course name:</label><br>
-		<input type="text" id="teeWhite" maxlength="255" data-bind="value: courseName" /><br>
+		<input type="text" id="teeWhite" maxlength="255" data-bind="value: courseName" name="courseName" data-required="true" data-trigger="change" /><br>
 		
 		<label for="courseAlias">Course alias:</label><br>
-		<input type="text" id="teeWhite" maxlength="255"  data-bind="value: courseAlias" /><br>
+		<input type="text" id="teeWhite" maxlength="255"  data-bind="value: courseAlias" name="courseAlias" data-required="true" data-trigger="change"/><br>
 		<table>
 			<tr>
 				<th colspan=3>Men</th>
@@ -56,10 +60,10 @@
 				
 				<!-- ko if: redTeeEnabled() == true -->
 					<td>
-						<input type="text" data-bind="value: courseCrRedMen" id="teeRed" maxlength="4" style="width: 2.5em" />
+						<input type="text" data-bind="value: courseCrRedMen" id="teeRed" maxlength="4" style="width: 2.5em" data-required="true" data-type="number" data-trigger="keyup"/>
 					</td>
 					<td>
-						<input type="text" id="teeRed" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedMen" />
+						<input type="text" id="teeRed" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 
@@ -82,10 +86,10 @@
 
 				<!-- ko if: blueTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeBlue" maxlength="4" style="width: 2.5em" data-bind="value: courseCrBlueMen"/>
+						<input type="text" id="teeBlue" maxlength="4" style="width: 2.5em" data-bind="value: courseCrBlueMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeBlue" maxlength="3" style="width: 2.5em" data-bind="value: courseSlBlueMen" />
+						<input type="text" id="teeBlue" maxlength="3" style="width: 2.5em" data-bind="value: courseSlBlueMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 				<!-- ko if: blueTeeEnabled() == false -->
@@ -104,19 +108,19 @@
 			
 				<!-- ko if: yellowTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowMen"/>
+						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowMen"/>
+						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 				
 				<!-- ko if: yellowTeeEnabled() == false -->
 					<td>
-						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowMen"/>
+						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowMen" disabled />
 					</td>
 					<td>
-						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowMen"/>
+						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowMen" disabled />
 					</td>
 				<!-- /ko -->
 			</tr>
@@ -126,10 +130,10 @@
 				</td>
 				<!-- ko if: whiteTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeWhite" maxlength="4" style="width: 2.5em" data-bind="value: courseCrWhiteMen"/>
+						<input type="text" id="teeWhite" maxlength="4" style="width: 2.5em" data-bind="value: courseCrWhiteMen" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeWhite" maxlength="3" style="width: 2.5em" data-bind="value: courseSlWhiteMen"/><br>
+						<input type="text" id="teeWhite" maxlength="3" style="width: 2.5em" data-bind="value: courseSlWhiteMen" data-required="true" data-type="number" data-trigger="change"/><br>
 					</td>
 				<!-- /ko -->
 				<!-- ko if: whiteTeeEnabled() == false -->
@@ -159,18 +163,18 @@
 				</td>
 				<!-- ko if: redTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeRed" maxlength="4" style="width: 2.5em" data-bind="value: courseCrRedLadies" />
+						<input type="text" id="teeRed" maxlength="4" style="width: 2.5em" data-bind="value: courseCrRedLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeRed" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedLadies" />
+						<input type="text" id="teeRed" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 				<!-- ko if: redTeeEnabled() == false -->
 					<td>
-						<input type="text" id="teeRedDisabled" maxlength="4" style="width: 2.5em" data-bind="value: courseCrRedLadies" />
+						<input type="text" id="teeRedDisabled" maxlength="4" style="width: 2.5em" data-bind="value: courseCrRedLadies" disabled />
 					</td>
 					<td>
-						<input type="text" id="teeRedDisabled" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedLadies" />
+						<input type="text" id="teeRedDisabled" maxlength="3" style="width: 2.5em" data-bind="value: courseSlRedLadies" disabled />
 					</td>
 				<!-- /ko -->
 			</tr>
@@ -180,10 +184,10 @@
 				</td>
 				<!-- ko if: blueTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeBlue" maxlength="4" style="width: 2.5em" data-bind="value: courseCrBlueLadies"/>
+						<input type="text" id="teeBlue" maxlength="4" style="width: 2.5em" data-bind="value: courseCrBlueLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeBlue" maxlength="3" style="width: 2.5em" data-bind="value: courseSlBlueLadies"/>
+						<input type="text" id="teeBlue" maxlength="3" style="width: 2.5em" data-bind="value: courseSlBlueLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 				<!-- ko if: blueTeeEnabled() == false -->
@@ -201,34 +205,42 @@
 				</td>
 				<!-- ko if: yellowTeeEnabled() == true -->
 					<td>
-						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowLadies"/>
+						<input type="text" id="teeYellow" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 					<td>
-						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowLadies"/>
+						<input type="text" id="teeYellow" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowLadies" data-required="true" data-type="number" data-trigger="change"/>
 					</td>
 				<!-- /ko -->
 
 				<!-- ko if: yellowTeeEnabled() == false -->
 					<td>
-						<input type="text" id="teeYellowDisabled" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowLadies"/>
+						<input type="text" id="teeYellowDisabled" maxlength="4" style="width: 2.5em" data-bind="value: courseCrYellowLadies" disabled />
 					</td>
 					<td>
-						<input type="text" id="teeYellowDisabled" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowLadies"/>
+						<input type="text" id="teeYellowDisabled" maxlength="3" style="width: 2.5em" data-bind="value: courseSlYellowLadies" disabled />
 					</td>				
 				<!-- /ko -->
 			</tr>
+			
+		</form>
+			
 		</table>
+		<p>
 		
 		<div id="hole_toggle" data-bind="visible: showHoleToggle">
-			<form action="">
-				<input type="radio" name="holes" value="9hole">9 hole course<br>
-				<input type="radio" name="holes" value="18hole">18 hole course
-			</form>
+		<!--	<form action=""> -->
+				<input type="radio" name="holes" value="9" data-bind="checked: noOfHoles" />9 hole course<br>
+				<input type="radio" name="holes" value="18" data-bind="checked: noOfHoles" />18 hole course
+<!--			</form> -->
 		</div>
 	</div>	
 
 
 	<div class="ui-widget-content" style="margin: 5px; padding: 15px; float:left">
+	
+		<form data-validate="parsley" id="formi2">
+	
+	
 		<table style="text-align: center; border-spacing: 0; border-collapse: collapse">
 			<tr>
 				<th id="scHeaders">#</span></th>
@@ -239,22 +251,34 @@
 				<th id="scHeaders"></th>
 				<th id="scHeaders"></th>
 			</tr>
+			
 		<!-- ko foreach: holes -->
+		
 			<tr style="font-size: 0.8em">
-				<td id="teeWhite" style="color: #ccc"><input id="transparentInput" type="text" maxlength="2" style="width: 1.5em; border-color: #ccc; color: #999; box-shadow: 0 0 0 ;" data-bind="value: hole_number" disabled /></td>
-				<td id="teeWhite"><input id="transparentInput" type="text" maxlength="1" style="width: 1.5em" data-bind="value: hole_par" /></td>
-				<td id="teeWhite"><input id="transparentInput" type="text" maxlength="2" style="width: 1.5em" data-bind="value: hole_hcp" /></td>
+				<td id="teeWhite" style="color: #ccc">
+					<input id="transparentInput" type="text" maxlength="2" style="width: 1.5em; border-color: #ccc; color: #999; box-shadow: 0 0 0 ;" data-bind="value: hole_number" disabled />
+				</td>
+				<td id="teeWhite">
+					<input id="transparentInput" type="text" maxlength="1" style="width: 1.5em" data-bind="value: hole_par" data-required="true" data-type="number" data-trigger="change" />
+				</td>
+				<td id="teeWhite">
+					<input id="transparentInput" type="text" maxlength="2" style="width: 1.5em" data-bind="value: hole_hcp" data-required="true" data-type="number" data-trigger="change" />
+				</td>
 				
 				<!-- ko if: $root.redTeeEnabled() == true -->
-					<td id="teeRed"><input id="transparentInput" type="text" maxlength="3"  style="width: 2em" data-bind="value: hole_length_red" /></td>
+					<td id="teeRed">
+						<input id="transparentInput"  type="text" maxlength="3"  style="width: 2em" data-bind="value: hole_length_red" data-required="true" data-type="number" data-trigger="change"/>
+					</td>
 				<!-- /ko -->
 				
 				<!-- ko if: $root.redTeeEnabled() == false -->
-					<td id="teeRedDisabled"><input id="transparentInputDisabled" type="text" maxlength="3"  style="width: 2em" data-bind="value: hole_length_red" disabled /></td>
+					<td id="teeRedDisabled"><input id="transparentInputDisabled"  type="text" maxlength="3"  style="width: 2em" data-bind="value: hole_length_red" disabled /></td>
 				<!-- /ko -->
 				
 				<!-- ko if: $root.blueTeeEnabled() == true -->
-					<td id="teeBlue"><input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_blue" /></td>
+					<td id="teeBlue">
+						<input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_blue" data-required="true" data-type="number" data-trigger="change" />
+					</td>
 				<!-- /ko -->
 				
 				<!-- ko if: $root.blueTeeEnabled() == false -->
@@ -262,7 +286,9 @@
 				<!-- /ko -->
 				
 				<!-- ko if: $root.yellowTeeEnabled() == true -->
-					<td id="teeYellow"><input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_yellow"/></td>
+					<td id="teeYellow">
+						<input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_yellow" data-required="true" data-type="number" data-trigger="change" />
+					</td>
 				<!-- /ko -->
 				
 				<!-- ko if: $root.yellowTeeEnabled() == false -->
@@ -270,10 +296,14 @@
 				<!-- /ko -->
 				
 				<!-- ko if: $root.whiteTeeEnabled() == true -->
-					<td id="teeWhite"><input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_white" /></td>
+					<td id="teeWhite">
+						<input id="transparentInput" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_white" data-required="true" data-type="number" data-trigger="change" />
+					</td>
 				<!-- /ko -->
 				<!-- ko if: $root.whiteTeeEnabled() == false -->
-					<td id="teeWhiteDisabled"><input id="transparentInputDisabled" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_white" /></td>
+					<td id="teeWhiteDisabled">
+						<input id="transparentInputDisabled" type="text" maxlength="3" style="width: 2em" data-bind="value: hole_length_white" disabled />
+					</td>
 				<!-- /ko -->				
 				
 			</tr>
@@ -284,14 +314,14 @@
 				<td id="scTotals"></td>
 				
 				<!-- ko if: redTeeEnabled() == true -->
-					<td id="teeRed" style="font-weight: bold; width: 2.5em" data-bind="text: courseLengthRed"></td>
+					<td id="teeRed" style="font-weight: bold; width: 2.5em" data-bind="text: courseLengthRed" ></td>
 				<!-- /ko -->
 				<!-- ko if: redTeeEnabled() == false -->
 					<td id="teeRedDisabled" style="font-weight: bold; width: 2.5em" data-bind="text: courseLengthRed"></td>
 				<!-- /ko -->				
 				
 				<!-- ko if: blueTeeEnabled() == true -->
-					<td id="teeBlue" style="font-weight: bold; width: 2.5em"  data-bind="text: courseLengthBlue"></td>
+					<td id="teeBlue" style="font-weight: bold; width: 2.5em"  data-bind="text: courseLengthBlue" ></td>
 				<!-- /ko -->
 				<!-- ko if: blueTeeEnabled() == false -->
 					<td id="teeBlueDisabled" style="font-weight: bold; width: 2.5em"  data-bind="text: courseLengthBlue"></td>
@@ -309,16 +339,24 @@
 					<td id="teeWhiteDisabled" style="font-weight: bold; width: 2.5em" data-bind="text: courseLengthWhite"></td>				
 				<!-- /ko -->
 			</tr>
+			
+			</form>
 		</table>
 	</div>
 
 	
 	<div class="ui-widget-content" style="margin: 5px; padding: 15px; float:left">
 	
+<!--		<span data-bind="text: noOfHoles"></span><p> -->
+	
+	
 		<a href="#" data-bind="click: saveCourse">Save</a>
 		<p>
 		<span id="message" data-bind="visible: saveSuccess">
-			Successfully saved!
+			<span style="color: green">Successfully saved!</span>
+		</span>
+		<span id="message" data-bind="visible: saveFailure">
+			<span style="color :red">Saving failed :(</span>
 		</span>
 
 	</div>
